# compressor

./: README.md  main.py  pyproject.toml
compressor/: cli.py  compressor.py  file_compressor.py  main.py
compressor/compression_methods/: __init__.py  huffman.py  huffman_tree.py  interface.py  lzw.py
compressor/utils/: logging.py
docs/: implementation.md  specification.md  testing.md
docs/weekly-reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
tests/: common.py  repetitive_ascii.txt  test_compressor.py  test_huffman_tree.py
tests/huffman/: constants.py  test_huffman.py
tests/lzw/: test_lzw.py
