[tool.poetry]
name = "compressor"
version = "0.1.0"
description = ""
authors = ["0442 <82746@proton.me>"]
readme = "README.md"

[tool.poetry.scripts]
compressor = "compressor.main:main"

[tool.poetry.dependencies]
python = "^3.12"
bitarray = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
